# go-symlink

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: softlink-manager.toml
src-tauri/permissions/autogenerated/: create_link_job.toml  delete_link_job.toml  get_app_state.toml  open_in_explorer.toml  refresh_link_status.toml  update_settings.toml
src-tauri/src/: commands.rs  credential_store.rs  lib.rs  link_service.rs  state_store.rs  webdav_service.rs
src/components/: create-link-form.tsx  link-table.tsx  settings-panel.tsx
src/components/ui/: alert-dialog.tsx  alert.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  switch.tsx
src/lib/: api.ts  types.ts
